--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-remita",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "a react js sdk for remita payment processing forms",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/RemitaNet/react-remita"
-  }
+    "url": "git+https://github.com/RemitaNet/react-remita.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RemitaNet/react-remita/issues"
+  },
+  "homepage": "https://github.com/RemitaNet/react-remita#readme"
 }
